# Progetto_Lista_Spesa

./: CMakeLists.txt  Grafica.cpp  Grafica.h  GraficaTest.cpp  ListaSpesa.cpp  ListaSpesa.h  ListaSpesaTest.cpp  Observer.h  ObserverTest.cpp  Prodotto.cpp  Prodotto.h  ProdottoTest.cpp  Subject.h  Utente.cpp  Utente.h  UtenteTest.cpp  UtenteTest.h  main.cpp
